# incident

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  DirectedAbstractGraphExample.cpp  PrimApiComparison.cpp
include/incident/: DirectedAbstractGraph.hpp  UndirectedAbstractGraph.hpp  UndirectedGraph.hpp  UndirectedMultiGraph.hpp  UndirectedPseudoGraph.hpp  graph_concepts.hpp  incident.hpp
include/incident/algorithms/: algorithms.hpp  basic_algorithms.hpp  bfs.hpp  bfsUndirected.hpp  creation_of_UndirectedAbstractGraph.hpp  dfs.hpp  dfsUndirected.hpp  mstPrim.hpp  sccKosaraju.hpp
include/incident/details/: errors.hpp  graph_concepts.hpp  hash_std_injection.hpp
include/incident/directed/: DirectedGraph.hpp  DirectedMultiGraph.hpp  DirectedPseudoGraph.hpp  directed.hpp
include/incident/directeds/: DirectedAbstractGraph.hpp
include/incident/infrastructure/: MatrixOwningView.hpp  MatrixView.hpp  infrastructure.hpp  matrix_concepts.hpp
include/incident/io/: Matrix.hpp  UndirectedGraphFromMatrix.hpp  UndirectedGraphToMatrix.hpp  io.hpp
include/incident/undirected/: UndirectedGraph.hpp  UndirectedMultiGraph.hpp  UndirectedPseudoGraph.hpp  undirected.hpp
include/incident/undirecteds/: UndirectedMultiGraph.hpp  UndirectedPseudoGraph.hpp
include/incident/utility/: MultiIndexedGraphView.hpp  (+8 more)
single_include/: incident.hpp
tests/: CMakeLists.txt  tst_DirectedAbstractGraph.cpp  tst_UndirectedAbstractGraph.cpp  tst_UndirectedAbstratGraph.cpp  tst_UndirectedPseudoGraph.cpp  tst_creation_of_UndirectedAbstractGraph.cpp  tst_dfsUndirected.cpp  tst_ioUndirectedGraph.cpp  tst_mstPrim.cpp
tests/algorithms/: tst_bfs.cpp  tst_dfs.cpp  tst_mstPrim.cpp  tst_sccKosaraju.cpp
tests/directed/: tst_DirectedGraph.cpp  tst_DirectedMultiGraph.cpp  tst_DirectedPseudoGraph.cpp
tests/undirected/: tst_UndirectedGraph.cpp  tst_UndirectedMultiGraph.cpp  tst_UndirectedPseudoGraph.cpp
tests/undirecteds/: tst_UndirectedPseudoGraph.cpp
tests/utility/: tst_MultiIndexedGraphView.cpp  tst_UniqueIndexedGraphView.cpp
